feat: Phase1 & Phase2  done